styles/animations.css
.card {
  position: relative;
  width: 300px;
  height: 300px;
  perspective: 1000px;
}

.card-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 20px;
}

.card-content {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  background: rgba(0, 0, 0, 0.5);
  border-radius: 30px;
  opacity: 0;
  transition: opacity 0.2s;
}

.card:hover .card-content {
  opacity: 3;
}

.flip-card-inner {
  position: relative;
  width: 80%;
  height: 40%;
  text-align: center;
  transition: transform 0.6s;
  transform-style: preserve-3d;
}

.card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

.flip-card-front,
.flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
}

.flip-card-back {
  transform: rotateY(180deg);
  background: rgba(92, 64, 51, 0.8);
  border-radius: 10px;
  color: #fff;
}

